--- a/assets/frontend/css/style.css
+++ b/assets/frontend/css/style.css
@@ -2013,6 +2013,7 @@ code {
 ----------------------------*/
 .topbar-area {
     background-color: #F7F7F7;
+    display: none;
 }
 
 .topbar-inner {
